--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,31 @@
 
  
- <div class="container-fluid">
  
  
  <nav class=" navbar navbar-expand-lg navbar-inverse bg-dark " style="border-style: solid; border-color: rgb(4, 185, 131); background-color: transparent;" >
     <div class="container-fluid" >
-      <a class="navbar-brand active" routerLink="pre"> <i> Book Store</i></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <a class="navbar-brand active" routerLink="pre"><span class="glyphicon glyphicon-book"></span> Book Store</a>
+      <button style="color: white;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="glyphicon glyphicon-th-list"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto float-end ">
          
          
           
-          <li class="nav-item">
-            <a class="nav-link" routerLink="pre" routerLinkActive="active" ><i class="glyphicon glyphicon-home"></i></a>
+          <li class="nav-item mt-1">
+            <a class="nav-link" routerLink="pre" style="border-right: solid;" routerLinkActive="active" >Home <i class="glyphicon glyphicon-home"></i></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="login"> Login <i class="glyphicon glyphicon-user"></i></a>
+          <li class="nav-item mt-1">
+            <a class="nav-link" style="border-right: solid;" routerLink="login"> Login <i class="glyphicon glyphicon-user"></i></a>
           </li>
-         
-
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="register" >Register <i class="glyphicon glyphicon-file"></i></a>
+          <li class="nav-item mt-1">
+            <a class="nav-link active" style="border-right: solid;" routerLink="register" >Register <i class="glyphicon glyphicon-file"></i></a>
           </li>
-          <li class="nav-item">
-            <input type="text" class="nav-item  ms-auto" style="padding: 10px;" placeholder="Enter search Item ">
-          </li>
-          <li class="nav-item">
-            <button class=" nav-item  ms-auto" style=" border: transparent; padding-left: 15px; padding: 12px;"><i class="glyphicon glyphicon-search"></i></button>
-          </li>
+          <form class="d-flex mt-2">
+            <input class="form-control mt-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+          </form>
         </ul>
         
        
@@ -38,7 +33,7 @@
     </div>
   </nav>
 
-</div>
+
 
     <router-outlet></router-outlet>
   
