--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,4 @@
-<p>cart works!</p>
+
 <div class="container">
     <button class="btn btn-info float-end" (click)="goback()">Back</button>
     <h4>Total Cart Value: <b>Rs.{{total}}/-</b> </h4>
@@ -20,33 +20,35 @@
         
         <div style="padding: 30%;">
             <div class="row">
-                <button class="btn btn-danger" style="width: 20%;" (click)="incr(i)"><i class="glyphicon glyphicon-plus"></i></button><button class="btn btn-warning" style="width: 20%; padding: 10px;">{{obj.quantity}}</button><button class="btn btn-danger" style="width: 20%;" (click)="decr(i)"><i class="glyphicon glyphicon-minus"></i></button>
+                <button class="btn btn-danger" style="width: 20%;" (click)="incr(i)"><i class="glyphicon glyphicon-plus"></i></button>
+                <button class="btn btn-warning" style="width: 20%; padding: 10px;">{{obj.quantity}}</button>
+                <button class="btn btn-danger" style="width: 20%;" (click)="decr(i)"><i class="glyphicon glyphicon-minus"></i></button>
             </div>
            
         </div>
 
         <div class="col-6">
                             
-          <button type="button" class="btn btn-info " data-toggle="modal" data-target="#myModal">Confirm Payment & Buy</button>
+          <button type="button" class="btn btn-info " (click)="placeOrder(obj)" data-toggle="modal" data-target="#myModal">Confirm Payment & Buy</button>
         </div>
        
   <div class="modal fade" id="myModal" role="dialog">
   <div class="modal-dialog">
   
   <!-- Modal content-->
-  <div class="modal-content">
+  <div class="modal-content" style="background-color: black; color: white;">
   <div class="modal-header">
   
-  <h4 class="modal-title">Purchase Details</h4>
+  <h4 class="modal-title" >Congratulations, Product ordered successfully</h4>
   <button type="button" class="close float-end" data-dismiss="modal">&times;</button>
   </div>
-  <div class="modal-body">
+ <!-- <div class="modal-body">
     
   <h2>Congratulations, <br> Product ordered successfully</h2>
   </div>
   <div class="modal-footer">
   <button  class="btn btn-default" data-dismiss="modal">Ok</button>
-  </div>
+  </div>-->
   </div>
   
   </div>
