--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,7 @@
-p:hover{
-    background-color: yellow;
-  }
+#card:hover {
+  background-color: rgb(3, 2, 22);
+  color:white;
+}
+#wishlist:visited {
+  color: rgb(197, 21, 51);
+}
