--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
  
  <nav class=" navbar navbar-expand-lg navbar-inverse bg-dark " style="border-style: solid; border-color: rgb(4, 185, 131); background-color: transparent;" >
     <div class="container-fluid" >
-      <a class="navbar-brand active" routerLink="pre"><span class="glyphicon glyphicon-book"></span> Book Store</a>
+      <a class="navbar-brand active" routerLink="pre"><i class="glyphicon glyphicon-align-justify"></i> Book Store</a>
       <button style="color: white;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="glyphicon glyphicon-th-list"></span>
       </button>
