--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row mt-5">
     <div class="col-md-3">
-      <img src="https://i.postimg.cc/L56MrfyR/image.png" alt="">
+      <img src="https://i.postimg.cc/RVb4hVkn/image1.png" alt="">
     </div>
     <div class="col-md-6 "  >
               <form class="form row g-3 " #formRef="ngForm" (ngSubmit)="onSubmit(formRef)">
