--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-
- 
- 
  
  <nav class=" navbar navbar-expand-lg navbar-inverse bg-dark " style="border-style: solid; border-color: rgb(4, 185, 131); background-color: transparent;" >
     <div class="container-fluid" >
@@ -23,7 +20,7 @@
           <li class="nav-item mt-1">
             <a class="nav-link active" routerLink="register" >Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
           </li>
-          
+
           <form class="d-flex mt-2">
             <input class="form-control mt-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit"><img src="https://i.postimg.cc/d3bPN9mB/loupe.png"   alt="" height="23px" width="23px"></button>
@@ -38,4 +35,76 @@
 
 
     <router-outlet></router-outlet>
-  
+    <section class="">
+      <!-- Footer -->
+      <footer class="bg-dark text-white text-center" style="background-color: black;">
+        <!-- Grid container -->
+        <div class="container p-4">
+          <!--Grid row-->
+          <div class="row">
+            <!--Grid column-->
+            <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+              <h5 class="text-uppercase"><b>tech bookstore</b></h5>
+    
+              <p>This  Online Bookstore Contains Five Categories Of Books
+                They Are Full Stack Developer,AngularJs,NodeJs,Modern JavaScript,Html,css&Rwd,MongoDb 
+              </p>
+            </div>
+            <!--Grid column-->
+    
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h5 class="text-uppercase"><b>connect</b></h5>
+    
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <img src="https://i.postimg.cc/MG6WDj5B/facebook.png"   alt="" width="20px" height="20px">
+                  <a href="#!" class="text-white">Facebook</a>
+                </li>
+                <li>
+                  <img src="https://i.postimg.cc/pTnXhMkc/twitter.png"   alt="" width="20px" height="20px">
+                  <a href="#!" class="text-white">Twitter</a>
+                </li>
+                <li>
+                  <img src="https://i.postimg.cc/L5cPYVzL/instagram.png"   alt="" width="20px" height="20px">
+                  <a href="#!" class="text-white">Instagram</a>
+                </li>
+              </ul>
+            </div>
+            <!--Grid column-->
+    
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h5 class="text-uppercase mb-0"><B>Address</B></h5>
+    
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <img src="https://i.postimg.cc/sxgm4z0y/location.png"   alt="" width="20px" height="20px">
+                  <a href="#!" class="text-white">23-7,elcon it park,chennai</a>
+                </li>
+              </ul>
+              <h5 class="text-uppercase mb-0"><B>contact</B></h5>
+    
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <img src="https://i.postimg.cc/kgY22mWK/contact.png"   alt="" width="20px" height="20px">
+                  <a href="#!" class="text-white">100-547-9874,onlinebookstore.com</a>
+                </li>
+              </ul>
+            </div>
+            
+            <!--Grid column-->
+          </div>
+          <!--Grid row-->
+        </div>
+        <!-- Grid container -->
+    
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: black">
+          © 2021 Copyright:
+          <a class="text-white" href="https://mdbootstrap.com/">Bookstore.com</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
+      <!-- Footer -->
+    </section>
