--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
 
 
     <router-outlet></router-outlet>
-    <section class="">
+    <section class="py-3">
       <!-- Footer -->
       <footer class="bg-dark text-white text-center" style="background-color: black;">
         <!-- Grid container -->
