--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
-  <button class="btn btn-success float-end" (click)="goto()">Add Products</button>
+  <button class="btn btn-primary " (click)="goto()">Add Products</button>
+  <button class="btn btn-danger float-end" (click)="logout()">Logout</button>
 </div>
 
 <!--
