--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
       <h1 style="text-align: center;color:turquoise"><strong><b><i>Welcome {{username}}</i></b></strong></h1>
 </div>
 <div class="container-fluid">
-<button class="btn btn-info float-end" (click)="viewcart()">Cart Items {{num}}</button>
+<button class="btn btn-info float-end" (click)="viewcart()"><img src="https://i.postimg.cc/FsC0hJJS/shopping-cart-empty-side-view.png" alt="" width="20px" height="20px"> {{num}}</button>
 <div class="dropdown float-end">
   <button class="btn btn-secondary dropdown-toggle " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     {{username}}
@@ -12,9 +12,8 @@
     <a class="dropdown-item " (click)="gotoProfile()">My Profile</a>
     <a class="dropdown-item" (click)="viewcart()">My Cart</a>
     <a class="dropdown-item" (click)="gotoWishlist()">Wish List</a>
-    <a class="dropdown-item " (click)="Logout()">Log Out</a>
-    <a class="dropdown-item" (click)="viewcart()">Cart</a>
     <a class="dropdown-item" (click)="myOrders()">My Orders</a>
+    <a class="dropdown-item " (click)="Logout()">Log Out</a>
   </div>
 </div>
 </div>
@@ -26,7 +25,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav " *ngFor="let obj of categories;">    
-      <li class="nav-item" style="display: inline-block;"  style="padding:0;margin-left:50px;"><a role="button" (click)="findcat(obj)">{{obj.ct}}   |</a></li>
+      <li class="nav-item" style="display: inline-block;"  style="padding:0;margin-left:50px;"><a role="button" (click)="findcat(obj)"><b>{{obj.ct}}</b></a></li>
       </ul>
   
 </div>
