--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="width: 1000px;height: 750px;">
 <div class="row mt-5">
     <div class="col-md-3">
       <img src="https://i.postimg.cc/RVb4hVkn/image1.png" alt="">
