--- a/src/app/vieworder/vieworder.component.html
+++ b/src/app/vieworder/vieworder.component.html
@@ -1,8 +1,7 @@
 
-<div class="container" style="padding-top: 20px; border: turquoise; border-style: solid;">
-
-
-    <div class="row mt-5" >
+<div class="container" style="padding-top: 20px; border: turquoise; border-style: solid;height: 900px;">
+  <h1 class="text-center"><b>Myorders</b></h1>
+   <div class="row mt-5" >
         <div class="col-sm-4 " style="padding-bottom: 20px;" *ngFor="let get of orders; let i= index" >
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row no-gutters">
