--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,51 @@
+<div class="card" style="width: 75%;">
+  <div class="card-body">
+  
+      
+       <div class="col-md-6">
+  
+        <h1 class="form-signin-heading">My profile</h1>
+        
+        <div class="form-horizontal">
+          <div class="form-group">
+            <label class="col-sm-3 control-label">Username:</label>
+            <p class="form-control-static">{{ username }}</p>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label">Firstname:</label>
+            <p class="form-control-static">{{ firstname }}</p>
+          
+          </div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label bold">Lastname:</label>
+            <p class="form-control-static">{{ lastname }}</p>
+          
+          </div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label">PhoneNo:</label>
+            <p class="form-control-static">{{ phoneno }}</p>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-3 control-label">EmailId:</label>
+              <p class="form-control-static">{{ emailid }}</p>
+              </div>
+              
+<div class="container" style="height: 700px;" ><a class="btn btn-success" routerLink="/home">back</a></div>
+
+          
+        </div>
+  
+      </div>
+  
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
 <div class="container" style="height: 700px;" ><a class="btn btn-success float-end" routerLink="/home">back</a></div>
