--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="container">
+          <button class="btn btn-info float-end" (click)="goback()">Back</button>
             <div class="col-md-12 p-3" style="border-style: solid;" *ngFor="let obj of products; let i=index">
               <div class="col-md-4"><img [src]="obj.image" width="100%"></div>
               <div class="col-md-4">
@@ -16,6 +17,7 @@
                 <h2>Price: Rs.{{obj.price}}/-</h2>
                 
               </div>
+             
             </div>
           </div>
     </div>
