--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" style="height: 700px;">
   <button class="btn btn-primary " (click)="goto()">Add Products</button>
   <button class="btn btn-danger float-end" (click)="logout()">Logout</button>
 </div>
