--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="height: 700px;">
     <div class="row">
         <div class="container">
             <div class="col-md-12 p-3" style="border-style: solid;" *ngFor="let obj of products; let i=index">
