--- a/src/app/pre/pre.component.html
+++ b/src/app/pre/pre.component.html
@@ -5,7 +5,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav " *ngFor="let obj of categories;">    
-      <li class="nav-item" style="display: inline-block;"  style="padding:0;margin-left:50px;"><a role="button" (click)="findcat(obj)">{{obj.ct}}   |</a></li>
+      <li class="nav-item" style="display: inline-block;"  style="padding:0;margin-left:50px;"><a role="button" (click)="findcat(obj)"><b>{{obj.ct}}</b>  </a></li>
       </ul>
   
 </div>
