--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -9,25 +9,25 @@
         <div class="form-horizontal">
           <div class="form-group">
             <label class="col-sm-3 control-label">Username:</label>
-            <p class="form-control-static">{{ username }}</p>
+            <p class="form-control-static">{{obj.username }}</p>
           </div>
           <div class="form-group">
             <label class="col-sm-3 control-label">Firstname:</label>
-            <p class="form-control-static">{{ firstname }}</p>
+            <p class="form-control-static">{{ obj.firstname }}</p>
           
           </div>
           <div class="form-group">
             <label class="col-sm-3 control-label bold">Lastname:</label>
-            <p class="form-control-static">{{ lastname }}</p>
+            <p class="form-control-static">{{ obj.lastname }}</p>
           
           </div>
           <div class="form-group">
             <label class="col-sm-3 control-label">PhoneNo:</label>
-            <p class="form-control-static">{{ phoneno }}</p>
+            <p class="form-control-static">{{ obj.phoneno }}</p>
             </div>
             <div class="form-group">
               <label class="col-sm-3 control-label">EmailId:</label>
-              <p class="form-control-static">{{ emailid }}</p>
+              <p class="form-control-static">{{ obj.emailid }}</p>
               </div>
               
 <div class="container" style="height: 700px;" ><a class="btn btn-success" routerLink="/home">back</a></div>
@@ -48,4 +48,3 @@
 
 
 
-<div class="container" style="height: 700px;" ><a class="btn btn-success float-end" routerLink="/home">back</a></div>
