--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
              
                         <div class="col-6">
                           
-                            <button type="submit" class="btn btn-info " data-toggle="modal" data-target="#myModal" [disabled]="formRef.invalid">submit</button>
+                            <button type="submit" class="btn btn-info " data-toggle="modal" data-target="#myModal" [disabled]="formRef.invalid">login</button>
                           </div>
 <!--                          
   <div class="modal fade" id="myModal" role="dialog">
