--- a/src/app/pre/pre.component.html
+++ b/src/app/pre/pre.component.html
@@ -20,6 +20,7 @@
        
        <ul class="nav-item d-flex ">
           <select name="searchby " style="width: 30%;" placeholder="Select Search" class="mt-4 form-select" id="searchby" [(ngModel)]="select">
+            <option value="All" selected>All</option>
             <option value="Category">Category</option>
             <option value="Bookname">Bookname</option>
             <option value="Author">Author</option>
