--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -49,7 +49,9 @@
             
              <div class="col-6">
                           
-               <button type="submit" class="btn btn-info " data-toggle="modal" data-target="#myModal">submit</button>
+               <button type="submit" class="btn btn-info m-3" data-toggle="modal" data-target="#myModal">Submit</button>
+               <button  class="btn btn-primary m-3"  routerLink="/pre">Cancel</button>
+
              </div>
             
 <div class="modal fade" id="myModal" role="dialog">
