--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,8 +1,41 @@
 
+
 <div class="container">
+  <div class="container-fluid text-center row align-items-start" *ngIf="num!==0">
+    <div class="col">
+      <h4>Total Cart Value: <b>Rs.{{total}}/-</b> </h4>
+    </div>
+    <div class="col">
+      <button type="button" class="btn btn-warning  mx-auto" data-toggle="modal" data-target="#myModal">Confirm Payment & Buy</button>
+    </div>
+    <div class="col">
     <button class="btn btn-info float-end" (click)="goback()">Back</button>
-    <h4>Total Cart Value: <b>Rs.{{total}}/-</b> </h4>
+    </div>
+    
+  
+   
+<div class="modal fade" id="myModal" role="dialog">
+<div class="modal-dialog">
+
+<!-- Modal content-->
+<div class="modal-content" style="background-color:green; color: white;">
+<div class="modal-header">
+
+<h4 class="modal-title" >Congratulations, Product ordered successfully</h4>
+<button type="button" class="close float-end" data-dismiss="modal">&times;</button>
 </div>
+<!-- <div class="modal-body">
+<h2>Congratulations, <br> Product ordered successfully</h2>
+</div>
+<div class="modal-footer">
+<button  class="btn btn-default" data-dismiss="modal">Ok</button>
+</div>-->
+</div>
+
+</div>
+</div>
+
+
 <div class="container">
     <div class="col-md-12 p-3" style="border-style: solid;" *ngFor="let obj of products; let i=index">
       <div class="col-md-4"><img [src]="obj.image" width="100%"></div>
@@ -14,6 +47,11 @@
           <li>Publish Date: {{obj.publishdate}}</li>
           <li>Rating: {{obj.rating}}</li>
         </ul>
+
+        <div class="col-3">
+                            
+          <button type="button button-danger" class="btn btn-danger " (click)="delete(obj)">Remove</button>
+        </div>
       </div>
       <div class="col-md-4">
         <h2>Price: Rs.{{obj.price}}/-</h2>
@@ -26,33 +64,16 @@
             </div>
            
         </div>
-
-        <div class="col-6">
-                            
-          <button type="button" class="btn btn-info " (click)="placeOrder(obj)" data-toggle="modal" data-target="#myModal">Confirm Payment & Buy</button>
-        </div>
-       
-  <div class="modal fade" id="myModal" role="dialog">
-  <div class="modal-dialog">
-  
-  <!-- Modal content-->
-  <div class="modal-content" style="background-color:black; color: white;">
-  <div class="modal-header">
-  
-  <h4 class="modal-title" >Congratulations, Product ordered successfully</h4>
-  <button type="button" class="close float-end" data-dismiss="modal">&times;</button>
-  </div>
- <!-- <div class="modal-body">
-    
-  <h2>Congratulations, <br> Product ordered successfully</h2>
-  </div>
-  <div class="modal-footer">
-  <button  class="btn btn-default" data-dismiss="modal">Ok</button>
-  </div>-->
-  </div>
-  
-  </div>
-  </div>
       </div>
     </div>
+    </div>
+    </div>
+    
+    <div class="container-fluid mt-5 tet-center" *ngIf="num==0">
+      <h1 class="text-center">Your <i class="fa fa-cart-arrow-down" aria-hidden="true"></i> cart is empty!!</h1>
+      <p class="text-center">Add items to it now</p>
+      <button class="btn btn-success mx-auto me-auto d-block float-center" (click)="goback()">Shop now</button>
+
+    </div>
+
   </div>
