--- a/src/app/viewproducts/viewproducts.component.html
+++ b/src/app/viewproducts/viewproducts.component.html
@@ -1,24 +1,60 @@
 
   <div class="container">
     <div class="col-sm-4">
-      <img [src]="product.image" width="100%">
+      <img [src]="product[0].image" width="100%">
     </div>
     <div class="col-sm-4" >
-      <h5 class="card-title"><b>{{product.bookname}}</b></h5>
+      <h5 class="card-title"><b>{{product[0].bookname}}</b></h5>
                     
       <ul>
-        <li>{{product.author}}</li>
-        <li>{{product.publisher}}</li>
-        <li>{{product.publishdate}}</li>
-        <li>{{product.binding}}</li>
-        <li><b>Rs.{{product.price}}</b></li>
+        <li>{{product[0].author}}</li>
+        <li>{{product[0].publisher}}</li>
+        <li>{{product[0].publishdate}}</li>
+        <li>{{product[0].binding}}</li>
+        <li><b>Rs.{{product[0].price}}</b></li>
       </ul>
     </div>
-   
-    <button class="btn btn-success" (click)="onSubmit(product)">Add to Cart</button>
-    <button  class="btn btn-primary" (click)="placeOrder(product)">Buy now</button>
+    <div class="col-sm-4" >
+      <div class="col-md-6 text-center" style="color: white;">
+        <form class="form row g-3 ml-5" #formRef="ngForm" (ngSubmit)="onSubmit(formRef)">
+              
+          <div class="form-group" hidden>
+          <!-- <label for="inputusername" class="form-label">Product Name</label>
+            <input type="text" class="form-control" id="inputproductname1" [ngModel]="username" readonly name="username" ngModel>-->
+        </div>
+                  <div class="form-group" hidden>
+                      <label for="inputusername" class="form-label">Product Name</label>
+                      <input type="text" class="form-control" id="inputproductname" [ngModel]="product.bookname" readonly name="bookname" ngModel>
+                  </div>
+                  <div class="form-group" hidden>
+                      <label for="inputusername" class="form-label">Product Specifications</label>
+                      <ul style="list-style:square"> <input type="text" class="form-control" id="inputproductdetails" [ngModel]="product.author" readonly name="author" ngModel></ul>
+                      <ul style="list-style: none;"> <input type="text" class="form-control" id="inputproductdetails" [ngModel]="product.publisher" readonly name="publisher" ngModel></ul>
+                      <ul style="list-style: none;"> <input type="text" class="form-control" id="inputproductdetails" [ngModel]="product.publishdate" readonly name="publishdate" ngModel></ul>
+                      <ul style="list-style: none;"> <input type="text" class="form-control" id="inputproductdetails" [ngModel]="product.rating" readonly name="rating" ngModel></ul>
+                  </div>
+                  <div class="form-group" hidden>
+                      <label for="inputusername" class="form-label">Product Price</label>
+                      <input type="number" class="form-control" id="inputproductprice" [ngModel]="product.price" readonly name="price" ngModel>
+                  </div>
+                  <div class="form-group pt-5" style="color: black;" hidden>
+                      <label for="exampleFormControlFile1" class="d-block"><strong>Upload Picture Url():</strong></label>
+                      <input type="text" class="form-control-file border-secondary" id="exampleFormControlFile1" [ngModel]="product.photo" readonly name="photo" ngModel >
+                      
+                    </div>
+       
+                  <div class="col-6">
+                      <button type="button" class="btn btn-primary" (click)=onSubmit(product[0])>Add Product</button>
+                    </div>
+                         
+        </form>
+          
+        
+      </div>
+      <button  class="btn btn-primary" (click)="placeOrder(product)">Buy now</button>
       
-    <button class="btn btn-warning" (click)="goto()">Back</button>
+      <button class="btn btn-warning" (click)="goto()">Back</button>
+    </div> 
     </div>
 
  
