--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -110,7 +110,7 @@
 
 
     <router-outlet></router-outlet>
-    <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="square-jelly-box"><p style="font-size: 20px; color: white">Loading...</p></ngx-spinner>
+    <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#00BFFF" type="square-jelly-box"><p style="font-size: 20px; color: white">Loading...</p></ngx-spinner>
 
 
 
@@ -118,7 +118,7 @@
 
     <section class="py-3">
       <!-- Footer -->
-      <footer class="bg-dark text-white text-center" style="background-color: black;">
+      <footer class="bg-primary footer text-white text-center" >
         <!-- Grid container -->
         <div class="container p-4">
           <!--Grid row-->
