--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,53 +1,58 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid" style="display: block; margin: auto;">
-    <div class="d-flex justify-content-center">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <div class="container-fluid">
     <img src="https://i.postimg.cc/652svFLG/books-1.png"   alt="" width="45px" height="45px">
-    <a class="navbar-brand active" routerLink="pre"> Book Store</a></div>
+    <a class="navbar-brand active" routerLink="pre"> Book Store</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mt-4 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="home"  routerLinkActive="active" >Home <img src="https://i.postimg.cc/BnbCbGxd/home-1.png"   alt="" height="15px" width="15px">  </a>
-        </li> 
-      </ul>
-    
-        
-        <li class="nav-item dropdown mt-4 float-end justify-content-start d-flex">
-          <button class="btn  dropdown-toggle bg-light "  type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{username}}
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item " style="text-decoration: none;" (click)="gotoProfile()">My Profile</a>
-            <a class="dropdown-item" style="text-decoration: none;" (click)="viewcart()">My Cart</a>
-            <a class="dropdown-item" style="text-decoration: none;" (click)="gotoWishlist()">Wish List</a>
-            <a class="dropdown-item" style="text-decoration: none;" (click)="myOrders()">My Orders</a>
-            <a class="dropdown-item " style="text-decoration: none;" (click)="Logout()">Log Out</a>
-          </div>
+          <a class="nav-link active" aria-current="page" style="color: black;" data-bs-toogle="collapse" data-bs-target="#navbarSupportedContent" routerLink="/home">Home <img src="https://i.postimg.cc/BnbCbGxd/home-1.png"   alt="" height="15px" width="15px">  </a>
         </li>
-        <ul class="nav-item  mt-4 ">
-          <button class="btn btn-info float-end" (click)="viewcart()"><img src="https://i.postimg.cc/FsC0hJJS/shopping-cart-empty-side-view.png" alt="" width="20px" height="20px"> {{num}}</button>
-        </ul>
-       <ul class="nav-item d-flex ">
-          <select name="searchby " style="width: 30%;" placeholder="Select Search" class="mt-4 form-select" id="searchby" [(ngModel)]="select">
-            <option value="Category">Category</option>
-            <option value="Bookname">Bookname</option>
-            <option value="Author">Author</option>
-        </select>
-        <input type="text"class="form-control mt-3" style="width: 40%;" placeholder="search by title" [(ngModel)]="searchTerm">  
-          <button class="btn btn-outline-success mt-1"  type="submit"><img src="https://i.postimg.cc/d3bPN9mB/loupe.png"   alt="" height="23px" width="23px"></button>
-        </ul>
-     
-     
+        <li class="nav-item">
+          <a class="nav-link" (click)="Logout()" style="color: black;" data-bs-toogle="collapse" data-bs-target=".navbar-collapse.show" routerLink="/login">LogOut  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
+        </li>
+      </ul>
+      <ul class="d-flex float-end">
+        <select name="searchby " style="width: 50%; height: 35px;" placeholder="Select Search" class=" mt-3 form-select" id="searchby" [(ngModel)]="select">
+          <option value="All" selected="selected">All</option>
+          <option value="Category">Category</option>
+          <option value="Bookname">Bookname</option>
+          <option value="Author">Author</option>
+      </select>
+      <input type="text"class="form-control mt-3  nav-link" placeholder="search by title" [(ngModel)]="searchTerm">  
+  
+      <button class="btn btn-outline-success mt-1 nav-link"  type="submit"><img src="https://i.postimg.cc/d3bPN9mB/loupe.png"   alt="" height="23px" width="23px"></button>
+    </ul>
+    <li class="nav-item dropdown  p-3  d-flex">
+      <button class="btn  dropdown-toggle bg-primary " style="color: black;" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        {{username}}
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item " style="text-decoration: none;" (click)="gotoProfile()">My Profile</a>
+        <a class="dropdown-item" style="text-decoration: none;" (click)="viewcart()">My Cart</a>
+        <a class="dropdown-item" style="text-decoration: none;" (click)="gotoWishlist()">Wish List</a>
+        <a class="dropdown-item" style="text-decoration: none;" (click)="myOrders()">My Orders</a>
+        <a class="dropdown-item " style="text-decoration: none;" (click)="Logout()">Log Out</a>
+      </div>
+      <button class="btn bg-primary float-end" (click)="viewcart()"><img src="https://i.postimg.cc/FsC0hJJS/shopping-cart-empty-side-view.png" alt="" width="20px" height="20px"> {{num}}</button>
+    </li>
+    
     </div>
   </div>
 </nav>
 
+
+
+
+
+
 <router-outlet></router-outlet>
 
 
-<div class="container mt-2" style="background-color: lightgray;" >
+<div class="container bg-primary mt-2"  >
   <nav class="navbar" >
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -64,7 +69,7 @@
 
 
 
-<div class="container" style="padding-top: 20px; border: turquoise; border-style: solid;">
+<div class="container bg-primary" style=" color: black;">
    
   <div id="myCarousel" style="padding: 30px;" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -97,34 +102,71 @@
   </div>
 
 
-    <div class="row mt-5" *ngIf="bss" >
+    <div class="row" *ngIf="bss">
       <div class="col-sm-4 " style="padding-bottom: 20px;" *ngFor="let get of courses | search : searchTerm: select; let i=index" >
-
-        <p> <div class="card mb-3">
-          <div class="row no-gutters"style="" id="card">
+        <div class="card mb-3" style="max-width: 540px;">
+          <div class="row no-gutters" id="cards">
             <div class="col-md-4">
-              <img [src]="get.image" width="100%" class="card-img" alt="...">
+              <img [src]="get.image" width="100%" class="card-img" alt="..."  style="padding-left: 15px;  padding-top: 40px;">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-              <button class="btn float-end" (click)="wishlist(get)" style="color: coral;"><span class="glyphicon glyphicon-heart " id="wishlist"></span></button> 
-                <h5 class="card-title"> <b>Book Name:</b> {{get.bookname}}</h5>
+                <h5 class="card-title">{{get.bookname}}</h5>
                   
                 <ul>
-                  <li> <b>Author:</b> {{get.author}}</li>
-                  <li> <b>Publisher:</b> {{get.publisher}}</li>
-                  <li> <b>languages:</b> {{get.language}}</li>
-                  <li> <b>Rating</b> {{get.rating}}</li>
+                  <li>{{get.author}}</li>
+                  <li>{{get.publisher}}</li>
+                  <li>{{get.language}}</li>
+                  <li>{{get.rating}}</li>
                 </ul>
                 
                 <p class="card-text"><b>Rs.{{get.price}}</b></p>
                 <button class="btn btn-warning" (click)="onSubmit(get)">Add to Cart</button>
-                <button class="btn btn-success" (click)="viewItem(i)">View</button>
+                <button class="btn btn-success" [routerLink]="['/viewproducts/'+get.bookId]" >View</button>
+              
+               
+                <div class="modal fade" id="myModal" role="dialog">
+                  <div class="modal-dialog ">
+                  
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                     <div class="modal-header">
+                       
+                        <h4 class="modal-title">Viewing details</h4>
+                      <!-- <img [src]="get.image" width="100%" class="card-img" alt="..."  style="padding-left: 15px;  padding-top: 40px;"> -->
+                        <button type="button" class="close float-end btn-danger" data-dismiss="modal">&times;</button>
+                      </div>
+                    <div class="modal-body bg-dark" style="color: white;">
+                      <img [src]="get.image" width="30%" height="30%" class="card-img" alt="..."  style="padding-left: 15px;  padding-top: 40px;">
+                       <h5 class="card-title">{{courses[i].bookname}}</h5>
+
+                  
+                <ul>
+                  <li>{{get.author}}</li>
+                  <li>{{get.publisher}}</li>
+                  <li>{{get.language}}</li>
+                  <li>{{get.rating}}</li>
+                </ul>
+                
+                <p class="card-text"><b>Rs.{{get.price}}</b></p>
+                <button type="button" class="close btn-danget float-end" data-dismiss="modal">&times;</button>
+                       
+                        <!--  <h1>Prod details</h1>
+                        <button type="button" class="close float-end" data-dismiss="modal">&times;</button>
+-->
+                      </div>
+                     <!-- <div class="modal-footer">
+                        <button  class="btn btn-default"(click)="ifOk()" data-dismiss="modal">Ok</button>
+                      </div>-->
+                    </div>
+                    
+                  </div>
+                </div>
+              
               </div>      
             </div>
           </div>
         </div>
- 
       </div>
     </div> 
 
@@ -147,17 +189,15 @@
               
               <p class="card-text"><b>Rs.{{get.price}}</b></p>
               <div class="col-6">
-                <button class="btn" (click)="onSubmit(get)">Add to Cart</button>
+                <button type="submit" class="btn btn-primary">Add Book</button>
               </div>
       
-    <button class="btn btn-success float-end" (click)="viewItem(i)" >View</button>
+    <button class="btn btn-success float-end" [routerLink]="['/viewproducts/'+get.bookId]"  >View</button>
     </div>
     </div>
     </div>
     </div>
     </div>
-
-
 </div>
 
 
