--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,28 @@
-<div class="container" style="width: 1000px;height: 750px;">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <div class="container-fluid">
+    <img src="https://i.postimg.cc/652svFLG/books-1.png"   alt="" width="45px" height="45px">
+    <a class="navbar-brand active" routerLink="pre"> Book Store</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/home">Home <img src="https://i.postimg.cc/BnbCbGxd/home-1.png"   alt="" height="15px" width="15px"> </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/login">Login <img src="https://i.postimg.cc/8PYVjN2v/login-1.png"   alt="" height="18px" width="18px"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register">Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
+        </li>
+      </ul>
+     
+    </div>
+  </div>
+</nav>
+
+<div class="container" >
 <div class="row mt-5">
     <div class="col-md-3">
       <img src="https://i.postimg.cc/RVb4hVkn/image1.png" alt="">
