--- a/src/app/pre/pre.component.html
+++ b/src/app/pre/pre.component.html
@@ -1,44 +1,40 @@
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid" style="display: block; margin: auto;">
-    <div class="d-flex justify-content-center">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <div class="container-fluid">
     <img src="https://i.postimg.cc/652svFLG/books-1.png"   alt="" width="45px" height="45px">
-    <a class="navbar-brand active" routerLink="pre"> Book Store</a></div>
+    <a class="navbar-brand active" routerLink="pre"> Book Store</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mt-4 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="cart" >Home <img src="https://i.postimg.cc/BnbCbGxd/home-1.png"   alt="" height="15px" width="15px">  </a>
-        </li> 
-        <li class="nav-item">
-          <a class="nav-link" routerLink="login"  > Login </a>
+          <a class="nav-link active" aria-current="page" routerLink="/login">Login <img src="https://i.postimg.cc/8PYVjN2v/login-1.png"   alt="" height="18px" width="18px"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="register"  routerLinkActive="active" > Register </a>
-        </li> 
+          <a class="nav-link" routerLink="/register">Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
+        </li>
       </ul>
-    
-       
-       <ul class="nav-item d-flex ">
-          <select name="searchby " style="width: 30%;" placeholder="Select Search" class="mt-4 form-select" id="searchby" [(ngModel)]="select">
-            <option value="Category">Category</option>
-            <option value="Bookname">Bookname</option>
-            <option value="Author">Author</option>
-        </select>
-        <input type="text"class="form-control mt-3" style="width: 40%;" placeholder="search by title" [(ngModel)]="searchTerm">  
-          <button class="btn btn-outline-success mt-1"  type="submit"><img src="https://i.postimg.cc/d3bPN9mB/loupe.png"   alt="" height="23px" width="23px"></button>
-        </ul>
-     
-     
+      <ul class="d-flex float-end">
+        <select name="searchby " style="width: 50%; height: 35px;" placeholder="Select Search" class=" mt-3 form-select" id="searchby" [(ngModel)]="select">
+          <option value="All" selected>All</option>
+          <option value="Category">Category</option>
+          <option value="Bookname">Bookname</option>
+          <option value="Author">Author</option>
+      </select>
+      <input type="text"class="form-control mt-3  nav-link" placeholder="search by title" [(ngModel)]="searchTerm">  
+  
+      <button class="btn btn-outline-success mt-1 nav-link"  type="submit"><img src="https://i.postimg.cc/d3bPN9mB/loupe.png"   alt="" height="23px" width="23px"></button>
+    </ul>
     </div>
   </div>
 </nav>
+
+
+
 <router-outlet></router-outlet>
 
 <!--Pre-->
-<div class="container mt-6 " style="background-color: lightgray;" >
+<div class="container mt-6 bg-primary "  >
   <nav class="navbar" >
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -53,7 +49,7 @@
      
 </div>
 
-<div class="container" style="background-color: turquoise; border: turquoise; border-style: solid;">
+<div class="container bg-primary" style=" color: black;">
    
   <div id="myCarousel" style="padding: 30px;" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -88,7 +84,7 @@
 
     <div class="row" *ngIf="bss">
       <div class="col-sm-4 " style="padding-bottom: 20px;" *ngFor="let get of courses | search : searchTerm: select; let i=index" >
-        <div class="card mb-3" style="max-width: 540px;">
+        <div class="card mb-3" id="cards" style="max-width: 540px;">
           <div class="row no-gutters" id="cards">
             <div class="col-md-4">
               <img [src]="get.image" width="100%" class="card-img" alt="..."  style="padding-left: 15px;  padding-top: 40px;">
@@ -106,7 +102,7 @@
                 
                 <p class="card-text"><b>Rs.{{get.price}}</b></p>
                 <button class="btn btn-warning" (click)="onSubmit(get)">Add to Cart</button>
-                <button class="btn btn-success" (click)="viewItem(i)">View</button>
+                <button class="btn btn-success" [routerLink]="['/viewproducts/'+get.bookId]" >View</button>
               
                
                 <div class="modal fade" id="myModal" role="dialog">
@@ -176,7 +172,7 @@
                 <button type="submit" class="btn btn-primary">Add Book</button>
               </div>
       
-    <button class="btn btn-success float-end" (click)="viewItem(i)" >View</button>
+    <button class="btn btn-success float-end" [routerLink]="['/viewproducts/'+get.bookId]"  >View</button>
     </div>
     </div>
     </div>
