--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
-  <button class="btn btn-success float-end" (click)="goto()">Add Products</button>
+  <a class="btn btn-success float-end m-2" routerLink="/home">back</a>
+  <button class="btn btn-success float-end m-2" (click)="goto()">Add Products</button>
+  <a class="btn btn-success float-end m-2" style="text-decoration: none;" (click)="Logout()">Log Out</a>
 </div>
-
 <!--
 <div class="container">
   
@@ -56,8 +57,8 @@
                   <h5 class="card-title">{{obj.bookname}}</h5>
                   <p class="card-text">{{obj.author}}</p>
                   <p class="card-text">Rs.{{obj.price}}</p>
-                  <a href="#" class="btn btn-primary" [routerLink]="['/updateproduct/'+obj.bookId]">Edit</a>
-                  <button class="btn btn-danger" (click)="delete(obj)">delete</button>
+                  <a href="#" class="btn btn-primary m-2" [routerLink]="['/updateproduct/'+obj.bookId]">Edit</a>
+                  <button class="btn btn-danger m-2" (click)="delete(obj,i)">Delete</button>
                 </div>      
               </div>
             </div>
