--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,26 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <div class="container-fluid">
+    <img src="https://i.postimg.cc/652svFLG/books-1.png"   alt="" width="45px" height="45px">
+    <a class="navbar-brand active" routerLink="pre"> Book Store</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" style="color: black;" data-bs-toogle="collapse" data-bs-target="#navbarSupportedContent" routerLink="/home">Home <img src="https://i.postimg.cc/BnbCbGxd/home-1.png"   alt="" height="15px" width="15px">  </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="Logout()" style="color: black;" data-bs-toogle="collapse" data-bs-target=".navbar-collapse.show" routerLink="/login">LogOut  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
+        </li>
+      </ul>
+     
+   
+    
+    </div>
+  </div>
+</nav>
+<!--
 <div class="card" style="width: 75%;">
   <div class="card-body">
   
@@ -34,7 +57,9 @@
               <p class="form-control-static">{{ user.email }}</p>
               </div>
               
-<div class="container" style="height: 700px;" ><a class="btn btn-success" routerLink="/home">back</a></div>
+<div class="container" style="height: 700px;" >
+  <a href="#" class="btn btn-primary" [routerLink]="['/updateprofile/'+user.userId]">Edit Profile</a>
+  <a class="btn btn-success" routerLink="/home">back</a></div>
 
           
         </div>
@@ -42,14 +67,55 @@
       </div>
   
     </div>
-  </div>
+  </div>-->
+ 
+
+<div class="container">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8" style="text-align: left;">
+    <div class="col-sm-4">
+      <ul style="list-style-type: none;">
+        <li class="p-2"><label class="col-sm-3 control-label">UserId:</label>
+          
+          <input type="text" [value]="userId" readonly>
+        </li>
+        <li class="p-2">
+          <label class="col-sm-3 control-label">Firstname:</label>
+         
+          <input type="text" [value]="user.firstname" readonly>
+        </li>
+        <li class="p-2">
+          <label class="col-sm-3 control-label">PhoneNo:</label>
+          <input type="text" [value]="user.number" readonly>
+        </li>
+      </ul>
+      <a href="#" class=" float-end btn btn-primary" [routerLink]="['/updateprofile/'+user.userId]">Edit Profile</a>
+    </div>
+    <div class="col-sm-4">
+      <ul style="list-style-type: none;">
+        <li class="p-2">
+          <label class="col-sm-3 control-label">UserName:</label>
+        
+          <input type="text" [value]="user.username" readonly>
+        </li>
+        <li class="p-2">
+          <label class="col-sm-3 control-label bold">Lastname:</label>
+         
+          <input type="text" [value]="user.lastname" readonly>
+        </li>
+        <li class="p-2">
+          <label class="col-sm-3 control-label">EmailId:</label>
+        
+              <input type="text" [value]="user.email" readonly>
+        </li>
+      </ul>
+      <a class="btn btn-success" routerLink="/home">back</a></div>
+    </div>
+    
+  <div class="col-sm-2"></div>
+</div>
 
 
 
 
 
-
-
-
-
-<div class="container" style="height: 700px;" ><a class="btn btn-success float-end" routerLink="/home">back</a></div>
