--- a/src/app/updateproduct/updateproduct.component.html
+++ b/src/app/updateproduct/updateproduct.component.html
@@ -57,8 +57,8 @@
     
                             <div class="form-group">
                               <label for="image" class="form-label">Cover Image</label>
-                                <input type="file" class="formcontrol" 
-                                (change)="incomingfile($event)" name="image" accept='image/*' placeholder="Upload file">
+                               <img [src]="book[0].image" alt="" ngModel>
+                               <input type="text" class="form-control" hidden id="image" name="image" [(ngModel)]="book[0].image" ngModel>
                               </div>
                  
                             <div class="col-6">
