--- a/src/app/vieworder/vieworder.component.html
+++ b/src/app/vieworder/vieworder.component.html
@@ -1,4 +1,25 @@
-
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <div class="container-fluid">
+    <img src="https://i.postimg.cc/652svFLG/books-1.png"   alt="" width="45px" height="45px">
+    <a class="navbar-brand active" routerLink="pre"> Book Store</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" style="color: black;" data-bs-toogle="collapse" data-bs-target="#navbarSupportedContent" routerLink="/home">Home <img src="https://i.postimg.cc/BnbCbGxd/home-1.png"   alt="" height="15px" width="15px">  </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="Logout()" style="color: black;" data-bs-toogle="collapse" data-bs-target=".navbar-collapse.show" routerLink="/login">LogOut  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
+        </li>
+      </ul>
+     
+   
+    
+    </div>
+  </div>
+</nav>
 <div class="container" style="padding-top: 20px; border: turquoise; border-style: solid;height: 900px;">
     <button  (click)="back()">Back</button>
   <h1 class="text-center"><b>Myorders</b></h1>
@@ -29,4 +50,6 @@
         </div>
       </div> 
 
+
+      <h1 *ngIf="num==0" class="text-danger text-center">No orders found</h1>
 </div>
